fix issue of barrire label truncated

--- a/sass/components/_barrier.scss
+++ b/sass/components/_barrier.scss
@@ -1,7 +1,9 @@
 @charset "UTF-8";
 
+.barrier-area {
+    padding: 13px 0;
+}
 /* Drag Lines and Prices */
-
 .chart-line {
     position: absolute;
     z-index: 35;
@@ -52,7 +54,6 @@
 }
 
 /*hover*/
-
 .draggable.chart-line:hover {
     &.horizontal {
         cursor: ns-resize;
@@ -63,8 +64,8 @@
 }
 
 /*hover*/
-
-.hide-pricelines > .chart-line.horizontal {
+.hide-pricelines > .chart-line.horizontal,
+.hide-pricelines > .barrier-area {
     display: none;
 }
 
